Add typeset alarm, add hyperlink event handler, update typesetting documentation